assets/css/style.css
body {
    margin: 0px;
    font-family: 'Poppins';
    font-size: 12pt;
    display: flex;
    flex-direction: column;
    background-color: #F1EFEF;
    color: #534444;
}


/*Navigation Bar*/
.navbar {
    display: fixed;
    overflow: hidden;
    background-color: #F1EFEF;
    width: 100%;
    position: fixed;
    z-index:1;
}

/* Links inside the navbar */
.nav-right a {
    font-size: 14pt;
    color: #534444;
    text-align: center;
    padding: 40px 18px;
    text-decoration: none;
    display: inline-block;
    list-style-type: none;
    font-weight: 400;
}

.nav-left {
    float:left;
    padding-top: 35px;
    padding-left: 50px;
}

.nav-right {
    float:right;
    padding-right: 36px;
}

/*Page Contents*/
.content {
    padding-left: 20%;
    padding-right: 20%;
    padding-top: 150px;
}


/* SECTION PADDING */
#contact {
    margin-bottom: 50px;
}

.intro-text {
    flex: 1;
    padding-left: 50px;
}

.intro-text p {
    padding-left: 20px;
}


/* home section */

/* Flexbox container for home section */
.home {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row; /* Align items horizontally */
    height: 80vh;
    margin-top: -20px;
}

/* Style for text section */
.home-text {
    text-align: left;
}

/* Center the image within the home-img container */
.home-img img {
    display: block;
    margin: 0 auto;
}

/* buttons for socials */
.sidexside {
    padding-left: 35px;
}

.button { 
    transition: all .2s ease-in-out; 
}
    
.button:hover { 
    transform: scale(1.12); 
}

h1, h2, h3 {
    font-family: 'Playfair Display';
    line-height:0.8;
}

h1 {
    margin-top: 15px;
    font-size: 36pt;
    text-shadow: 1px 1px 1px #e6d4d4;
    margin-bottom: 28px;
}

.light {
    font-size: 30pt;
    font-weight:400;
    padding: 0;
    margin: 0;
    padding-right: 8px;
}

h2 {
    font-size: 28pt;
}

/* Background bubble for subheaders */
p span {
    background-color: #534444;
    border-radius: 20px;
    color: #F1EFEF;
    padding: 8px;
    padding-left: 18px;
    padding-right: 18px;
    text-decoration: none;
    font-weight: lighter;
    font-size: smaller;
}


#desc {
    font-size: large;
    margin: 0.1px;
    padding-bottom: 5px;
}

/* underlines current navbar page */
#curr-page {
    border-bottom: 1px solid #534444;
}


/* Image text side by side */
.container {
    display: flex;
    align-items: center;
}

   
/* all links */
a {
    text-decoration: none;
    color: #534444;
}

.row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 15px;
    justify-content: center;
}

#proj {
    padding: 22px;
}

/* Create four equal columns that sits next to each other */
.column {
    flex: 25%;
    max-width: 26%;
    padding: 0 12px;
}

.skill-row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 5px;
    justify-content: center;
}

/* Create four equal columns that sits next to each other */
.skill-column {
    flex: 25%;
    max-width: 100%;
    padding: 0 12px;
}


.proj-column {
    flex: 10%;
    max-width: 100%;
    padding: 0 0;
    display: inline-block;

}

.email {
    padding-left: 20%;
    color: #594f4f;
}

/* Create brown box for project image title */
figcaption p {
    padding: 10px 0; 
    box-sizing: border-box; 
    width: 100%; 
    background-color: #534444;
    color:#E7DFDF;
    margin-top: 4px;
    border-radius: 20px;
}

figure {
    width: 300px;
    margin: 0;
    display: inline-block;  
    transition: 400ms;
}

figure img:hover {
    opacity: 80%;
    FILTER: blur(0.5px);
    

}

.container.email {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    margin-left: -20%;
}

/* light text */
#light {
    color: #7c7474;
}


/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
    .column {
    flex: 50%;
    max-width: 50%;
    }
}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 1100px) {
    .skill-column {
        flex: 100%;
        max-width: 100%;
    }
    .proj-column {
        flex: 100%;
    }
    .home-img {
        padding-left: 40px;
        }
    .container.about {
        flex-direction: column;
    }
    .home {
        padding-top: 140px;
        flex-direction: column;
    }
}

@media screen and (max-width: 1100px) {
    
}

